--- a/styles.scss
+++ b/styles.scss
@@ -13,10 +13,11 @@ html{
 h1{
     text-align: center;
     margin: 30px auto;
+    font-size: 40px;
 }
 
 .main-container{
-
+    margin-top: 100px;
     .container{
         margin: 20px auto;
         display: flex;
@@ -32,6 +33,8 @@ h1{
             max-width: 200px;
             border: 2px solid orange;
             border-radius: 5px;
+            background-color: black;
+            user-select: none;
 
             p{
                 text-align: center;
@@ -47,6 +50,23 @@ h1{
                 font-size: 11px;
             }
         }
+    }
+
+    .status-display{
+        text-align: center;
+    }
+}
+
+.winMsg{
+    display: none;
+    font-size: 30px;
+    border-radius: 5px black;
+    background-color: #e5e7eb;
+    color:#111827;
+
+    .replayBtn{
+        border-radius: 10px;
+        
     }
 }
 
