--- a/styles.scss
+++ b/styles.scss
@@ -38,7 +38,7 @@ h1{
 
             p{
                 text-align: center;
-                margin: 10px auto;
+                margin: 20px auto;
             }
 
             .description{
@@ -59,14 +59,25 @@ h1{
 
 .winMsg{
     display: none;
+    position: absolute;
+    top: 40%;
+    left: calc(50% - 100px);
+    width: 200px;
     font-size: 30px;
-    border-radius: 5px black;
+    border: 2px solid black;
+    border-radius: 5px;
     background-color: #e5e7eb;
     color:#111827;
+    user-select: none;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
+    padding: 10px;
 
     .replayBtn{
         border-radius: 10px;
-        
+        border: 2px solid black;
+
     }
 }
 
