--- a/styles/styles.css
+++ b/styles/styles.css
@@ -41,7 +41,7 @@ h1 {
 }
 .main-container .container .object p {
   text-align: center;
-  margin: 10px auto;
+  margin: 20px auto;
 }
 .main-container .container .object .description {
   font-size: 20px;
@@ -56,11 +56,24 @@ h1 {
 
 .winMsg {
   display: none;
+  position: absolute;
+  top: 40%;
+  left: calc(50% - 100px);
+  width: 200px;
   font-size: 30px;
-  border-radius: 5px black;
+  border: 2px solid black;
+  border-radius: 5px;
   background-color: #e5e7eb;
   color: #111827;
+  -webkit-user-select: none;
+     -moz-user-select: none;
+          user-select: none;
+  flex-direction: column;
+  align-items: center;
+  gap: 10px;
+  padding: 10px;
 }
 .winMsg .replayBtn {
   border-radius: 10px;
+  border: 2px solid black;
 }/*# sourceMappingURL=styles.css.map */
